--- a/hw01/hw01.elizapedersen.com/index.html
+++ b/hw01/hw01.elizapedersen.com/index.html
@@ -3,9 +3,12 @@
    <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
-     <title>Eliza</title>
+     <title>CS4550</title>
    </head>
    <body>
-      <h1>Yo, hit 'em with a high and a low</h1>
+      <a href="elizapedersen.com" target="_blank">
+        <h3>Back to home</h3>
+      </a>
+      <img src="Screenshot_2019-01-10_20-50-29.png">
    </body>
 </html>
